--- a/vue-reactive/04.观察者模式/index.html
+++ b/vue-reactive/04.观察者模式/index.html
@@ -17,7 +17,7 @@
 <script>
   /**
    * 与发布订阅者不同 观察者中 发布者和订阅者(观察者)是相互依赖的 必须要求观察者订阅内容改变事件 ，而发布订阅者是由调度中心进行调度 
-   * 1.一个目标类，有一个存储观察者的集合，有添加观察者的方法，有通知观察者的方法，有清空观察者的方法
+   * 1.一个调度中心类，有一个存储观察者的集合，有添加观察者的方法，有通知观察者的方法，有清空观察者的方法
    * 2.生成观察者的类，类中含有观察者调度方法 
   **/
 
